<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:background="@drawable/navy_ripple"
    android:paddingHorizontal="18dp"
    android:paddingVertical="10dp"
    android:clickable="true">

    <ImageButton
        android:id="@+id/tile_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerVertical="true"
        android:background="@drawable/ripple"
        android:clipToOutline="true"
        android:contentDescription="@string/tile_icon"
        android:padding="2dp"
        android:scaleType="centerInside"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/folder" />

    <TextView
        android:id="@+id/tile_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tile_icon"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/leading_icon"
        android:layout_toEndOf="@id/tile_icon"
        android:ellipsize="middle"
        android:maxLines="1"
        android:text="@string/test_message"
        android:textColor="@color/navy"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tile_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tile_icon"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/leading_icon"
        android:layout_toEndOf="@id/tile_icon"
        android:alpha="0.6"
        android:maxLines="1"
        android:text="@string/test_message"
        android:textColor="@color/navy"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/leading_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/leading_icon"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:tint="@color/navy" />

</RelativeLayout>